# Simple_Client-Server_Chat

./: .gitignore  CMakeLists.txt  README.md
include/: include.h
src/: client.c  main.c  main.h  server.c
test/: test.c  test.h
